Fixed spacing around color slice

--- a/src/components/_project/testimonial.module.scss
+++ b/src/components/_project/testimonial.module.scss
@@ -3,105 +3,108 @@
 .Testimonial {
   padding-top: 0;
   background-color: $color-white;
-}
 
-.bannerWrap {
-  width: calc(100% + 40px);
-  margin: 0 -1.25rem 6rem;
-  position: relative;
-  overflow: hidden;
-}
-
-.copyWrap {
-  max-width: 1250px;
-  margin: 3.75rem 1.25rem 0 1.25rem;
-  position: relative;
-
-  @media (min-width: $desktop) {
-    margin: 6.25rem 13.125rem;
-  }
-
-  h2 {
-    margin-bottom: 25px;
-    font-weight: 400;
-  }
-
-  p {
-    margin-bottom: 1.56rem;
-    font-weight: 300;
-    font-size: 1.25rem;
-    line-height: 150%;
-
+  .bannerWrap {
+    width: calc(100% + 40px);
+    margin: 0 -1.25rem 1rem;
+    position: relative;
+    overflow: hidden;
     @media (min-width: $desktop) {
-      font-size: 1.5625rem;
+      margin: 0 -1.25rem 2rem;
     }
   }
 
-  .author {
-    font-weight: 800;
-    font-size: 27px;
-    line-height: 1.6875rem;
-    letter-spacing: 0.04em;
-    color: $color-orange;
-    font-family: $font-header;
+  .copyWrap {
+    max-width: 1250px;
+    margin: 3.75rem 1.25rem 0 1.25rem;
+    position: relative;
+
+    @media (min-width: $desktop) {
+      margin: 6.25rem 13.125rem;
+    }
+
+    h2 {
+      margin-bottom: 25px;
+      font-weight: 400;
+    }
+
+    p {
+      margin-bottom: 1.56rem;
+      font-weight: 300;
+      font-size: 1.25rem;
+      line-height: 150%;
+
+      @media (min-width: $desktop) {
+        font-size: 1.5625rem;
+      }
+    }
+
+    .author {
+      font-weight: 800;
+      font-size: 27px;
+      line-height: 1.6875rem;
+      letter-spacing: 0.04em;
+      color: $color-orange;
+      font-family: $font-header;
+    }
   }
-}
 
-.copyWrap::before {
-  position: absolute;
-  content: '“';
-  font-family: 'Poller One';
-  line-height: 1;
-  font-size: 80px;
-  top: -25px;
-  left: -40px;
-  width: 0;
-  height: 0;
-  color: $color-greylt;
-  z-index: 1;
-
-  @media (min-width: $desktop) {
-    font-size: 354.36px;
-    top: -30px;
-    left: -225px;
-  }
-}
-
-.galleryWrap {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  gap: 40px;
-
-  @media (min-width: $tablet) and (max-width: $desktop) {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-  }
-}
-
-.imageWrap {
-  height: 300px;
-  flex: 1 1 500px;
-  position: relative;
-  overflow: hidden;
-
-  .image {
+  .copyWrap::before {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    height: 100%;
-  }
-
-  @media (min-width: $desktop) {
-    width: 100%;
-    height: 550px;
-  }
-
-  @media (min-width: 800px) and (max-width: $desktop) {
+    content: '“';
+    font-family: 'Poller One';
+    line-height: 1;
+    font-size: 80px;
+    top: -25px;
+    left: -40px;
+    width: 0;
     height: 0;
-    padding-top: 100%;
+    color: $color-greylt;
+    z-index: 1;
+
+    @media (min-width: $desktop) {
+      font-size: 354.36px;
+      top: -30px;
+      left: -225px;
+    }
+  }
+
+  .galleryWrap {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 40px;
+
+    @media (min-width: $tablet) and (max-width: $desktop) {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 20px;
+    }
+  }
+
+  .imageWrap {
+    height: 300px;
+    flex: 1 1 500px;
+    position: relative;
+    overflow: hidden;
+
+    .image {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 100%;
+      height: 100%;
+    }
+
+    @media (min-width: $desktop) {
+      width: 100%;
+      height: 550px;
+    }
+
+    @media (min-width: 800px) and (max-width: $desktop) {
+      height: 0;
+      padding-top: 100%;
+    }
   }
 }
